--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #121212;
-  color: #ffffff;
+  background-color: #18181b;
+  color: #f3f4f6;
 }
 
 code {
